improved ipython notebook notifications