@@ -6,9 +6,6 @@ import com.intellij.execution.ExecutionException;
 import com.intellij.execution.RunContentExecutor;
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.process.KillableColoredProcessHandler;
-import com.intellij.notification.Notification;
-import com.intellij.notification.NotificationListener;
-import com.intellij.notification.NotificationType;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.components.ProjectComponent;
 import com.intellij.openapi.diagnostic.Logger;
@@ -45,10 +42,8 @@ import org.jetbrains.plugins.ipnb.protocol.IpnbConnectionV3;
 
 import javax.swing.event.HyperlinkEvent;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -92,21 +87,12 @@ public final class IpnbConnectionManager implements ProjectComponent {
   private void startConnection(@NotNull final IpnbCodePanel codePanel, final IpnbFileEditor fileEditor, final String path) {
     String url = IpnbSettings.getInstance(myProject).getURL();
     if (StringUtil.isEmptyOrSpaces(url)) {
-      showWarning(fileEditor, "Please, specify IPython Notebook URL in <a href=\"\">Settings->Tools->IPython Notebook</a>",
-                  new HyperlinkAdapter() {
-                    @Override
-                    protected void hyperlinkActivated(HyperlinkEvent e) {
-                      ShowSettingsUtil.getInstance().showSettingsDialog(myProject, "IPython Notebook");
-                    }
-                  });
-      return;
-    }
-    if (startConnection(codePanel, path, url, false)) {
-      return;
+      url = IpnbSettings.DEFAULT_URL;
     }
     url = showDialogUrl(url);
     if (url == null) return;
     IpnbSettings.getInstance(myProject).setURL(url);
+
     boolean connectionStarted = startConnection(codePanel, path, url, false);
     if (!connectionStarted) {
       final String finalUrl = url;
@@ -123,11 +109,6 @@ public final class IpnbConnectionManager implements ProjectComponent {
               new Alarm(Alarm.ThreadToUse.SWING_THREAD).addRequest(new Runnable() {
                 @Override
                 public void run() {
-                  final Notification notification =
-                    new Notification("IPythonNotebook", "", "<html>IPython notebook started at <a href=\"" + finalUrl +
-                                                            "\">" + finalUrl + "</a></html>", NotificationType.INFORMATION,
-                                     NotificationListener.URL_OPENING_LISTENER);
-                  notification.notify(myProject);
                   startConnection(codePanel, path, finalUrl, true);
                 }
               }, 3000);
@@ -138,15 +119,19 @@ public final class IpnbConnectionManager implements ProjectComponent {
     }
   }
 
+  @Nullable
   private static String showDialogUrl(@NotNull final String initialUrl) {
     final String url = Messages.showInputDialog("IPython Notebook URL:", "Start IPython Notebook", null, initialUrl,
                                                 new InputValidator() {
                                                   @Override
                                                   public boolean checkInput(String inputString) {
                                                     try {
-                                                      new URL(inputString);
+                                                      final URI uri = new URI(inputString);
+                                                      if (uri.getPort() == -1 || StringUtil.isEmptyOrSpaces(uri.getHost())) {
+                                                        return false;
+                                                      }
                                                     }
-                                                    catch (MalformedURLException e) {
+                                                    catch (URISyntaxException e) {
                                                       return false;
                                                     }
                                                     return !inputString.isEmpty();
@@ -181,7 +166,6 @@ public final class IpnbConnectionManager implements ProjectComponent {
           cell.updatePanel(outputs);
         }
       };
-      final URI url = new URI(urlString);
 
       HttpRequests.request(urlString + "/api").connect(new HttpRequests.RequestProcessor<Object>() {
         @Override
@@ -189,16 +173,17 @@ public final class IpnbConnectionManager implements ProjectComponent {
           final IpnbConnection connection;
           try {
             if (request.isSuccessful()) {
-              connection = new IpnbConnectionV3(url, listener);
+              connection = new IpnbConnectionV3(urlString, listener);
             }
             else {
-              connection = new IpnbConnection(url, listener);
+              connection = new IpnbConnection(urlString, listener);
             }
             myKernels.put(path, connection);
           }
           catch (URISyntaxException e) {
             if (showNotification) {
-              showWarning(codePanel.getFileEditor(), "IPython Notebook connection refused");
+              showWarning(codePanel.getFileEditor(), "Please, check IPython Notebook URL in <a href=\"\">Settings->Tools->IPython Notebook</a>",
+                          new IpnbSettingsAdapter());
               LOG.warn("IPython Notebook connection refused: " + e.getMessage());
             }
           }
@@ -206,22 +191,9 @@ public final class IpnbConnectionManager implements ProjectComponent {
         }
       });
     }
-    catch (URISyntaxException e) {
-      if (showNotification) {
-        showWarning(codePanel.getFileEditor(), "Please, check IPython Notebook URL in <a href=\"\">Settings->Tools->IPython Notebook</a>",
-                    new HyperlinkAdapter() {
-                      @Override
-                      protected void hyperlinkActivated(HyperlinkEvent e) {
-                        ShowSettingsUtil.getInstance().showSettingsDialog(myProject, "IPython Notebook");
-                      }
-                    });
-        LOG.warn("IPython Notebook URI Syntax Error: " + e.getMessage());
-      }
-      return false;
-    }
     catch (IOException e) {
       if (showNotification) {
-        showWarning(codePanel.getFileEditor(), "IPython Notebook connection refused");
+        showWarning(codePanel.getFileEditor(), "IPython Notebook connection refused", null);
         LOG.warn("IPython Notebook connection refused: " + e.getMessage());
       }
       return false;
@@ -234,11 +206,12 @@ public final class IpnbConnectionManager implements ProjectComponent {
     BalloonBuilder balloonBuilder = JBPopupFactory.getInstance().createHtmlTextBalloonBuilder(
       message, null, MessageType.WARNING.getPopupBackground(), listener);
     final Balloon balloon = balloonBuilder.createBalloon();
-    balloon.showInCenterOf(fileEditor.getRunCellButton());
-  }
-
-  private static void showWarning(@NotNull final IpnbFileEditor fileEditor, @NotNull final String message) {
-    showWarning(fileEditor, message, null);
+    ApplicationManager.getApplication().invokeLater(new Runnable() {
+      @Override
+      public void run() {
+        balloon.showInCenterOf(fileEditor.getRunCellButton());
+      }
+    });
   }
 
   private boolean startIpythonServer(@NotNull final String url, @NotNull final IpnbFileEditor fileEditor) {
@@ -246,13 +219,13 @@ public final class IpnbConnectionManager implements ProjectComponent {
     if (module == null) return false;
     final Sdk sdk = PythonSdkType.findPythonSdk(module);
     if (sdk == null) {
-      showWarning(fileEditor, "Please check Python Interpreter in Settings->Python Interpreter");
+      showWarning(fileEditor, "Please check Python Interpreter in Settings->Python Interpreter", null);
       return false;
     }
     try {
       final PyPackage ipythonPackage = PyPackageManager.getInstance(sdk).findPackage("ipython", false);
       if (ipythonPackage == null) {
-        showWarning(fileEditor, "Add IPython to the interpreter of the current project.");
+        showWarning(fileEditor, "Add IPython to the interpreter of the current project.", null);
         return false;
       }
     }
@@ -261,6 +234,11 @@ public final class IpnbConnectionManager implements ProjectComponent {
     final Map<String, String> env = ImmutableMap.of("PYCHARM_EP_DIST", "ipython", "PYCHARM_EP_NAME", "ipython");
 
     final Pair<String, String> hostPort = getHostPortFromUrl(url);
+    if (hostPort == null) {
+      showWarning(fileEditor, "Please, check IPython Notebook URL in <a href=\"\">Settings->Tools->IPython Notebook</a>",
+                  new IpnbSettingsAdapter());
+      return false;
+    }
     final String ipython = PythonHelpersLocator.getHelperPath("pycharm/pycharm_load_entry_point.py");
     final ArrayList<String> parameters = Lists.newArrayList(sdk.getHomePath(), ipython, "notebook", "--no-browser");
     if (hostPort.getFirst() != null) {
@@ -297,20 +275,16 @@ public final class IpnbConnectionManager implements ProjectComponent {
     }
   }
 
-  @NotNull
+  @Nullable
   public static Pair<String, String> getHostPortFromUrl(@NotNull String url) {
-    String host = null;
-    String port = null;
-    int index = url.indexOf("://");
-    if (index != -1) {
-      url = url.substring(index + 3);
+    try {
+      final URI uri = new URI(url);
+      final int port = uri.getPort();
+      return Pair.create(uri.getHost(), port == -1 ? null : String.valueOf(port));
     }
-    index = url.indexOf(':');
-    if (index != -1) {
-      host = url.substring(0, index);
-      port = url.substring(index + 1);
+    catch (URISyntaxException e) {
+      return null;
     }
-    return Pair.create(host, port);
   }
 
   public void projectOpened() {}
@@ -349,5 +323,12 @@ public final class IpnbConnectionManager implements ProjectComponent {
 
   public void disposeComponent() {
     shutdownKernels();
+  }
+
+  class IpnbSettingsAdapter extends HyperlinkAdapter {
+    @Override
+    protected void hyperlinkActivated(HyperlinkEvent e) {
+      ShowSettingsUtil.getInstance().showSettingsDialog(myProject, "IPython Notebook");
+    }
   }
 }
